write lots of code, comment and commplete second test

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
+  <form id="user" action="index.html" method="post">
+    <input type="text" id="intake">
+    <button type="submit" name="button">Submit</button>
+  </form>
+    <span class="nameDisplay"></span>
+    <form id="card" action="index.html" method="post">
+      <div class="cardDisplay">
+        <span id="question"></span>
+        <button type="radio" class="radio1" name="button"><span id="question1"></span></button>
+        <button type="radio" class="radio2" name="button"><span id="question2"></span></button>
+        <button type="radio" class="radio3" name="button"><span id="question3"></span></button>
+        <button type="radio" class="radio4" name="button"><span id="question4"></span></button>
+    </div>
+  </form>
+</body>
 </html>
