--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </form>
     <span class="nameDisplay"></span>
     <form id="card" action="index.html" method="post">
-      <div class="cardDisplay">
+      <div id="cardDisplay">
         <span id="question"></span>
         <button type="radio" class="radio1" name="button"><span id="question1"></span></button>
         <button type="radio" class="radio2" name="button"><span id="question2"></span></button>
